# DiaBox

./: CMakeLists.txt  CacheImageProvider.cpp  CacheImageProvider.h  DirectoryImageCache.cpp  DirectoryImageCache.h  DirectoryModel.cpp  DirectoryModel.h  InfoRow.qml  Main.qml  README.md  exifreader.cpp  exifreader.h  main.cpp  stopwatch.cpp  stopwatch.h
.github/workflows/: linux-desktop.ym_  linux-desktop.yml  linux.yml  macos.yml  wasm.yml  wasm610.ym_  wasm610.yml  wasm_jurplel.yml  windows.yml
